# Voice-Controlled-AWS

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  audio_service.cpp  command_processor.py  lambda_function.py  transcribe_processor.py
frontend/src/: App.css  App.js  App.test.js
frontend/src/components/: recorder.css  recorder.js
voice-assistant-web/src/components/: recorder.js
